public static class AnimationTriggerNames
{
    public const string Idle = "Idle";
    public const string IsMoving = "IsMoving";
    public const string MoveSpeed = "MoveSpeed";
    public const string Attack = "Attack";
    public const string Shoot = "Shoot";
    public const string Die = "Die";
}
